--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 .vercel
 node_modules/
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+dist
+dist-ssr
+*.local
+.env
