--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@google/genai": "^0.12.0",
     "@google/generative-ai": "^0.24.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
