--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "vite": "^6.3.1",
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -37,7 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "typescript-eslint": "^8.26.1"
+    
   }
 } 
