--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,32 +13,37 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.12",
     "@mui/icons-material": "^6.4.12",
+    "@mui/material": "^6.4.12",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "google-libphonenumber": "^3.2.42",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
     "recharts": "^2.12.0",
     "socket.io-client": "^4.8.1",
-    "yup": "^1.6.1"
+    "validator": "^13.15.15",
+    "yup": "^1.6.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "vite": "^6.3.1",
     "@eslint/js": "^9.22.0",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/validator": "^13.15.2",
+    "@types/zxcvbn": "^4.4.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.26.1"
-    
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.3.1"
   }
-} 
+}
