--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,17 +15,22 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.12",
     "@mui/material": "^6.4.12",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.6",
     "google-libphonenumber": "^3.2.42",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
     "recharts": "^2.12.0",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.11",
     "validator": "^13.15.15",
     "yup": "^1.6.1",
     "zxcvbn": "^4.4.2"
