--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "node scripts/createAdmin.js && node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [
