--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT=10000
 MONGO_URI=mongodb+srv://...
 PYTHON_MICROSERVICE_URL=https://iaas-fastapi.onrender.com
+FRONTEND_URL=https://iaas-frontend.vercel.app
+
