--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=10000
-MONGO_URI=mongodb+srv://...
+MONGO_URI=mongodb+srv://me:hdreska47@cluster0.fwq9wnj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PYTHON_MICROSERVICE_URL=https://iaas-fastapi.onrender.com
 FRONTEND_URL=https://iaas-frontend.vercel.app
 
