--- a/server/package.json
+++ b/server/package.json
@@ -20,13 +20,14 @@
   "dependencies": {
     "@google/genai": "^0.12.0",
     "@google/generative-ai": "^0.24.1",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "google-libphonenumber": "^3.2.42",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1",
+    "mongoose": "^8.16.5",
     "nodemailer": "^7.0.4",
     "socket.io": "^4.8.1"
   },
