--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^8.16.5",
     "nodemailer": "^7.0.4",
     "socket.io": "^4.8.1",
+    "validator": "^13.15.15",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
